<resources>
    <string name="app_name">BrewDayApplication</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="lista_ingredienti">Dispensa</string>
    <string name="Modifica">Modifica Lista</string>
    <string name="Ingrediente">Ingrediente</string>
    <string name="Quantità">Quantità (g)</string>
    <string name="conferma">Conferma</string>
    <string name="inserisci_capacit_equipment">Inserisci capacità equipment</string>
    <string name="title_activity_ingrediente">Ingrediente Activity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="lista_ricette">Ricette</string>
    <string name="titolo_new_ricetta">Titolo Ricetta</string>
    <string name="birra_ricetta">Quantità birra prodotta: 1 litro</string>
    <string name="salvaricetta">Salva Ricetta</string>
    <string name="title_activity_main2">Main Activity</string>
    <string name="title_activity_list_ricette">List Ricette Activity</string>
    <string name="backricetta">Torna Indietro</string>
    <string name="malto">Malto</string>
    <string name="orzo">Orzo</string>
    <string name="lievito">Lievito</string>
    <string name="acqua">Acqua</string>
    <string name="zucchero">Zucchero</string>
    <string name="luppolo">Luppolo</string>
    <string name="additivi">Additivi</string>
    <string name="grammi">g</string>
    <string name="kilo_grammi">kg</string>
    <string name="what_should_i_brew_today">what should i brew today?</string>

</resources>